--- a/DataProcessing/Styles/DataGridStyle.xaml
+++ b/DataProcessing/Styles/DataGridStyle.xaml
@@ -26,21 +26,22 @@
 
     <Style x:Key="MainDataGridCell" TargetType="DataGridCell">
         <Setter Property="Padding" Value="2.5" />
-            <Setter Property="Background" Value="Transparent" />
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type DataGridCell}">
-                        <Border Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}">
-                            <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Right" />
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Style.Triggers>
-                <Trigger Property="IsSelected" Value="True">
-                    <Setter Property="Foreground" Value="#000000"/>
-                </Trigger>
-            </Style.Triggers>
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type DataGridCell}">
+                    <Border Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}">
+                        <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Right" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsSelected" Value="True">
+                <Setter Property="Background" Value="{StaticResource PrimaryColorBrush}" />
+                <Setter Property="Foreground" Value="#ffffff" />
+            </Trigger>
+        </Style.Triggers>
     </Style>
 
     <Style x:Key="MainDataGrid" TargetType="{x:Type DataGrid}">
@@ -49,14 +50,13 @@
         <Setter Property="AutoGenerateColumns" Value="False" />
         <Setter Property="RowHeaderWidth" Value="0" />
         <Setter Property="SelectionUnit" Value="FullRow" />
-        <Setter Property="SelectionMode" Value="Single" />
+        <Setter Property="SelectionMode" Value="Extended" />
         <Setter Property="CanUserReorderColumns" Value="False" />
         <Setter Property="CanUserResizeColumns" Value="True" />
         <Setter Property="Background" Value="#ffffff" />
         <Setter Property="HorizontalGridLinesBrush" Value="{StaticResource GridLineBrush}" />
         <Setter Property="VerticalGridLinesBrush" Value="{StaticResource GridLineBrush}" />
         <Setter Property="ColumnHeaderStyle" Value="{StaticResource MainDataGridColumnHeader}" />
-        <Setter Property="RowStyle" Value="{StaticResource MainDataGridRow}" />
         <Setter Property="CellStyle" Value="{StaticResource MainDataGridCell}" />
     </Style>
 
