--- a/DataProcessing/Views/Popups/ExportSettings.xaml
+++ b/DataProcessing/Views/Popups/ExportSettings.xaml
@@ -19,30 +19,52 @@
                 <Label Content="Hour mark:" FontWeight="Bold" 
                        Margin="0 0 5 0" />
                 <ComboBox ItemsSource="{Binding TimeMarks}"
-                          SelectedValue="{Binding SelectedTimeMark}" />
+                          SelectedValue="{Binding SelectedTimeMark}"
+                          MinWidth="35"/>
 
             </StackPanel>
 
             <!-- Light/Dark span -->
-            <Label Content="Dark period:" FontWeight="Bold"/>
+            <CheckBox Content="Export selected period"
+                      IsChecked="{Binding ExportSelectedPeriod}"
+                      FontWeight="Bold" />
             <StackPanel Orientation="Horizontal"
+                        IsEnabled="{Binding ExportSelectedPeriod}"
                         Margin="0 0 0 10">
                 <StackPanel Width="100" Margin="0 0 10 0">
                     <Label Content="From:" />
-                    <TextBox Text="{Binding DarkFrom, Converter={StaticResource TimeSpanToString}}" />
+                    <TextBox Text="{Binding From, Converter={StaticResource TimeSpanToString}}" />
                 </StackPanel>
 
                 <StackPanel Width="100">
                     <Label Content="Till:" />
-                    <TextBox Text="{Binding DarkTill, Converter={StaticResource TimeSpanToString}}" />
+                    <TextBox Text="{Binding Till, Converter={StaticResource TimeSpanToString}}" />
                 </StackPanel>
             </StackPanel>
 
             <!-- State mode -->
             <StackPanel Orientation="Horizontal"
-                        Margin="0 0 0 20">
+                        Margin="0 0 0 10">
                 <Label Content="Max number of states:" FontWeight="Bold" />
                 <TextBox Width="25" Text="{Binding MaxStates}" />
+            </StackPanel>
+
+            <!-- Specific criteria-->
+            <StackPanel Margin="0 0 0 20">
+                <Label Content="Specific criteria" FontWeight="Bold" />
+                <StackPanel Orientation="Horizontal"
+                            Margin="0 0 0 5">
+                    <Label Content="Wakefulness (s) &lt; " />
+                    <TextBox Text="{Binding WakefulnessBelow}"
+                             MinWidth="25"
+                             LostFocus="TextBox_LostFocus" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Paradoxical sleep (s) &lt; " />
+                    <TextBox Text="{Binding ParadoxicalSleepBelow}"
+                             MinWidth="25"
+                             LostFocus="TextBox_LostFocus" />
+                </StackPanel>
             </StackPanel>
             
             <!-- Buttons -->
