--- a/DataProcessing/Views/Popups/TextDialog.xaml
+++ b/DataProcessing/Views/Popups/TextDialog.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:DataProcessing.Views"
              mc:Ignorable="d" 
+             Focusable="True"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Margin="10 10 10 10">
         <Grid.RowDefinitions>
@@ -17,7 +18,7 @@
         <!-- Name -->
         <StackPanel Grid.Row="0">
             <TextBlock Text="{Binding Label}" FontWeight="SemiBold" />
-            <TextBox Text="{Binding Input}" />
+            <TextBox x:Name="txbInput" Text="{Binding Input}" />
         </StackPanel>
 
         <!-- Buttons -->
