Changing database structure

--- a/DataProcessing/Views/WorkfileEditor.xaml
+++ b/DataProcessing/Views/WorkfileEditor.xaml
@@ -77,21 +77,20 @@
                           Grid.Row="1"
                           MouseUp="DataGrid_MouseUp">
 
-                    <!-- Columns -->
+                    <!-- Columns --><!--
                     <DataGrid.Columns>
-                        <!-- Title column -->
+                        --><!-- Title column --><!--
                         <DataGridTemplateColumn Header="Time" MinWidth="95" SortMemberPath="AT">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <Border x:Name="wrapper" Background="{Binding IsMarker, Converter={StaticResource MarkerToColor}}">
-                                        <TextBlock Text="{Binding AT}" 
-                                                   TextWrapping="Wrap" />
+                                        <TextBlock Text="{Binding Time}" />
                                     </Border>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
                         <DataGridTextColumn Header="State" MinWidth="95" Binding="{Binding State}" />
-                    </DataGrid.Columns>
+                    </DataGrid.Columns>-->
                 </DataGrid>
             </Grid>
         </Border>
