--- a/DataProcessing/Views/Popups/ExportSettings.xaml
+++ b/DataProcessing/Views/Popups/ExportSettings.xaml
@@ -46,7 +46,9 @@
             <StackPanel Orientation="Horizontal"
                         Margin="0 0 0 10">
                 <Label Content="Max number of states:" FontWeight="Bold" />
-                <TextBox Width="25" Text="{Binding MaxStates}" IsReadOnly="True" />
+                <TextBox Text="{Binding MaxStates}"
+                         Width="25" 
+                         IsReadOnly="False" />
             </StackPanel>
 
             <!-- Specific criteria-->
