--- a/DataProcessing/Styles/Colors.xaml
+++ b/DataProcessing/Styles/Colors.xaml
@@ -1,7 +1,23 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:DataProcessing.Styles">
-    
-    <SolidColorBrush x:Key="PrimaryColorBrush" Color="#217346" />
-    
+
+    <Color x:Key="PrimaryColor">#5f94cc</Color>
+    <Color x:Key="PrimaryColorDark">#4776b0</Color>
+    <Color x:Key="PrimaryColorLight">#a7cae4</Color>
+    <Color x:Key="PrimaryColorDeep">#436692</Color>
+    <Color x:Key="PrimaryColorHighLight">#d6e7f3</Color>
+    <Color x:Key="LabelTextColor">#bfc1c2</Color>
+    <Color x:Key="LightGrayColor">#e6e6e6</Color>
+    <Color x:Key="VeryLightGrayColor">#f3f3f3</Color>
+
+    <SolidColorBrush x:Key="PrimaryColorBrush" Color="{StaticResource PrimaryColor}" />
+    <SolidColorBrush x:Key="PrimaryColorDarkBrush" Color="{StaticResource PrimaryColorDark}" />
+    <SolidColorBrush x:Key="PrimaryColorLightBrush" Color="{StaticResource PrimaryColorLight}" />
+    <SolidColorBrush x:Key="PrimaryColorDeepBrush" Color="{StaticResource PrimaryColorDeep}" />
+    <SolidColorBrush x:Key="PrimaryColorHighlightBrush" Color="{StaticResource PrimaryColorHighLight}" />
+    <SolidColorBrush x:Key="LabelTextColorBrush" Color="{StaticResource LabelTextColor}" />
+    <SolidColorBrush x:Key="LightGrayColorBrush" Color="{StaticResource LightGrayColor}" />
+    <SolidColorBrush x:Key="VeryLightGrayColorBrush" Color="{StaticResource VeryLightGrayColor}" />
+
 </ResourceDictionary>
