--- a/DataProcessing/Styles/TextBoxStyle.xaml
+++ b/DataProcessing/Styles/TextBoxStyle.xaml
@@ -3,8 +3,69 @@
                     xmlns:local="clr-namespace:DataProcessing.Styles">
     
     <Style TargetType="{x:Type TextBox}">
-        <Setter Property="BorderThickness" Value="1 1 1 1" />
-        <Setter Property="BorderBrush" Value="#c6c6c6" />
-        <Setter Property="Padding" Value="1 2 1 2" />
+        <Setter Property="Padding" Value="3 3 3 3" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="BorderBrush" Value="{StaticResource LabelTextColorBrush}" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBox}">
+                    <Grid>
+                        <Border Padding="{TemplateBinding Padding}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            CornerRadius="3">
+                            <ScrollViewer x:Name="PART_ContentHost" />
+                        </Border>
+                        <Border x:Name="disableOverview" Background="#ffffff" Opacity="0.5" Visibility="Collapsed" />
+                    </Grid>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter TargetName="disableOverview" Property="Visibility" Value="Visible" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+
+        <Style.Triggers>
+            <Trigger Property="IsFocused" Value="True">
+                <Setter Property="BorderBrush" Value="{StaticResource PrimaryColorLightBrush}" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="WatermarkTextBox" TargetType="{x:Type TextBox}" BasedOn="{StaticResource {x:Type TextBox}}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBox}">
+                    <Border Padding="{TemplateBinding Padding}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            CornerRadius="3">
+                        <Grid>
+                            <ScrollViewer x:Name="PART_ContentHost" />
+                            <Label x:Name="watermark" 
+                                   Content="{TemplateBinding Tag}" 
+                                   Visibility="Collapsed"
+                                   Foreground="{StaticResource LabelTextColorBrush}"
+                                   FontWeight="Bold"
+                                   Margin="3 3 3 3"
+                                   Padding="0" />
+                        </Grid>
+                    </Border>
+
+                    <ControlTemplate.Triggers>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="IsFocused" Value="False" />
+                                <Condition Property="Text" Value="" />
+                            </MultiTrigger.Conditions>
+                            <Setter TargetName="watermark" Property="Visibility" Value="Visible" />
+                        </MultiTrigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 </ResourceDictionary>
