--- a/DataProcessing/Styles/ButtonStyle.xaml
+++ b/DataProcessing/Styles/ButtonStyle.xaml
@@ -24,6 +24,46 @@
             <Trigger Property="IsPressed" Value="True">
                 <Setter Property="Background" Value="{StaticResource PrimaryColorDeepBrush}" />
             </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Background" Value="{StaticResource PrimaryColorHighlightBrush}" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="SecondaryButtonStyle" TargetType="{x:Type Button}">
+        <Setter Property="Padding" Value="0 0 0 5" />
+        <Setter Property="Background" Value="#ffffff" />
+        <Setter Property="Foreground" Value="{StaticResource PrimaryColorBrush}" />
+        <Setter Property="BorderThickness" Value="0 0 0 2" />
+        <Setter Property="BorderBrush" Value="{StaticResource PrimaryColorBrush}" />
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="Cursor" Value="Hand" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            Padding="{TemplateBinding Padding}">
+                        <ContentPresenter />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Foreground" Value="{StaticResource PrimaryColorDarkBrush}" />
+                <Setter Property="BorderBrush" Value="{StaticResource PrimaryColorDarkBrush}" />
+            </Trigger>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="Foreground" Value="{StaticResource PrimaryColorDeepBrush}" />
+                <Setter Property="BorderBrush" Value="{StaticResource PrimaryColorDeepBrush}" />
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Foreground" Value="{StaticResource PrimaryColorHighlightBrush}" />
+                <Setter Property="BorderBrush" Value="{StaticResource PrimaryColorHighlightBrush}" />
+            </Trigger>
         </Style.Triggers>
     </Style>
 </ResourceDictionary>
